[gd_scene load_steps=5 format=3 uid="uid://d0av3lgye5gb3"]

[ext_resource type="Script" path="res://scenes/ui/book_ui/book_ui.gd" id="1_x3hpw"]
[ext_resource type="Texture2D" uid="uid://c6itoqr7gl2vg" path="res://assets/sprites/book/BOOK-STEP1.png" id="2_k0lgd"]
[ext_resource type="AudioStream" uid="uid://d4gpefu80bbnc" path="res://assets/sfx/book/FX_BOOK_Open.wav" id="3_au8rr"]
[ext_resource type="AudioStream" uid="uid://mqu5kuj23yma" path="res://assets/sfx/book/FX_BOOK_Close.wav" id="4_gcx33"]

[node name="BookUI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_x3hpw")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.501961)

[node name="BookTexture" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_k0lgd")

[node name="OpenSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_au8rr")
bus = &"SFX"

[node name="CloseSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_gcx33")
bus = &"SFX"
